--- a/CódigoFuente/BitacorasProduccion/Views/Shared/_Layout.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/Shared/_Layout.cshtml
@@ -180,6 +180,7 @@
                                                             <li class="@(ViewBag.TercelNivel == "IT_Inventory_tablet" ? "current-page" : null )"><a href="@Url.Action("Tablet", "IT_Inventory_items")">Tablets</a></li>
                                                             <li class="@(ViewBag.TercelNivel == "IT_Inventory_radio" ? "current-page" : null )"><a href="@Url.Action("Radio", "IT_Inventory_items")">Radios</a></li>
                                                             <li class="@(ViewBag.TercelNivel == "IT_Inventory_ap" ? "current-page" : null )"><a href="@Url.Action("AP", "IT_Inventory_items")">APs</a></li>
+                                                            <li class="@(ViewBag.TercelNivel == "IT_Inventory_scanner" ? "current-page" : null )"><a href="@Url.Action("Scanner", "IT_Inventory_items")">Scanners</a></li>
 
                                                         </ul>
                                                     </li>
